fix blog title letters getting cut off

--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -16,6 +16,7 @@
   font-size: 62px;
   line-height: 75px; /* 120.968% */
   letter-spacing: 0.04rem;
+  padding: 0.5rem;
 }
 
 .gpt3__blog-container {
